[gd_scene load_steps=11 format=3 uid="uid://dl41mo1e3hnlo"]

[ext_resource type="Script" path="res://scenes/autostart/soul_screen/soul_screen.gd" id="1_fyd6i"]
[ext_resource type="Theme" uid="uid://d276arnrjws3i" path="res://resources/theme/dark/dark.tres" id="2_ey0j8"]
[ext_resource type="PackedScene" uid="uid://dfrws6lo2o7d0" path="res://scenes/autostart/soul_screen/soul_sprite/soul_sprite.tscn" id="2_rspx0"]
[ext_resource type="PackedScene" uid="uid://bpq246h5ihhck" path="res://scenes/component/shake_shader_component/shake_shader_component.tscn" id="2_whm7q"]
[ext_resource type="PackedScene" uid="uid://dp27xbynyqp65" path="res://scenes/bullet_up_hell/pattern_master/pattern_master.tscn" id="5_742rc"]
[ext_resource type="Texture2D" uid="uid://b4wqq3rdroryo" path="res://assets/image/npc/cat/cat_90_100_shadow.png" id="5_ary8y"]
[ext_resource type="PackedScene" uid="uid://dmyeg6ldx2orv" path="res://scenes/bullet_up_hell/vignette/vignette.tscn" id="7_1mte2"]
[ext_resource type="PackedScene" uid="uid://d2qho5dskl5rr" path="res://scenes/autostart/soul_screen/soul_button/soul_button.tscn" id="7_mmi8j"]
[ext_resource type="PackedScene" uid="uid://dia4fb2p2xioq" path="res://scenes/autostart/soul_screen/black_fade/black_fade.tscn" id="7_pbbxw"]
[ext_resource type="PackedScene" uid="uid://b3awft3ugc6q3" path="res://scenes/component/tween/simple_tween/simple_tween.tscn" id="10_pmey6"]

[node name="SoulScreen" type="Node"]
script = ExtResource("1_fyd6i")
shake_shader_component_scene = ExtResource("2_whm7q")

[node name="Node2D" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PatternMaster" parent="Node2D" instance=ExtResource("5_742rc")]
rotation = 4.46638e-06

[node name="SoulSprite" parent="Node2D" instance=ExtResource("2_rspx0")]
unique_name_in_owner = true
z_index = 4095

[node name="CatSprite2D" type="Sprite2D" parent="Node2D"]
unique_name_in_owner = true
position = Vector2(470, 79)
texture = ExtResource("5_ary8y")

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ey0j8")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -40.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP : 9"
horizontal_alignment = 1

[node name="SoulButton" parent="Control" instance=ExtResource("7_mmi8j")]
z_index = -4096
layout_mode = 1
offset_left = -40.0
offset_top = 204.0
offset_right = 38.0
offset_bottom = 229.0

[node name="BlackFade" parent="Control" instance=ExtResource("7_pbbxw")]
visible = false
layout_mode = 1

[node name="Vignette" parent="." instance=ExtResource("7_1mte2")]

[node name="BossClickSimpleTween" parent="." node_paths=PackedStringArray("target") instance=ExtResource("10_pmey6")]
target = NodePath("..")
duration = 0.5
call_method = "_boss_click_simple_tween"
